# mkdocs-latest-git-tag-plugin

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt
development/contributing/: index.html
development/documentation/: index.html
docs/: index.md
docs/development/: contributing.md  documentation.md
mkdocs_git_latest_tag_plugin/: plugin.py
mkdocs_latest_git_tag_plugin/: plugin.py
search/: search_index.json
