[tool.poetry]
name = "mkdocs-git-latest-tag-plugin"
version = "0.1.0"
description = "MkDocs plugin to get the latest git tag"
authors = ["Grant Ramsay <seapagan@gmail.com>"]
readme = "README.md"
packages = [{include = "mkdocs_git_latest_tag_plugin"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
